Add background and form elements, update style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<aside>   
+<aside class="left">   
     <div class="logo">
         <img src="odin-lined.png" alt="The Odin Project logo">
         <h1>Odin</h1>
@@ -26,6 +26,10 @@
                     <input type="email" name="email" id="email">
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password">
+                    <div class="tableFooter">
+                        <input type="submit" value="Create Account">
+                        <p>Already have an account? <a href="">Log in</a></p>
+                    </div>
                 </div>
                 <div class="formColumn">
                     <label for="last-name">Last Name</label>
@@ -38,6 +42,6 @@
             </form>
         </div>
     </main>
-<footer></footer>
+    <aside class="right"></aside>
 </body>
 </html>
