Add styling to .main and table To-do: form validation, fonts, improve look and responsiveness of inputs

--- a/index.html
+++ b/index.html
@@ -16,29 +16,33 @@
 </aside>
     <main>
         <div class="content">
-            <p>paragraph text</p>
-            <p id="callToAction">call to action</p>
             <form action="" method="get">
-                <div class="formColumn">
-                    <label for="first-name">First Name</label>
-                    <input type="text" name="first-name" id="first-name">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password">
-                    <div class="tableFooter">
-                        <input type="submit" value="Create Account">
-                        <p>Already have an account? <a href="">Log in</a></p>
+                <div class="tableTop">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium porro reprehenderit repudiandae quis dolore tempore ratione numquam nihil rerum hic qui dolor iure odit nesciunt at quod, facilis tenetur!</p>
+                    <h2 id="callToAction">call to action</h2>
+                </div>
+                <div class="tableInputWrapper">
+                    <div class="formColumn">
+                        <label for="first-name">First Name</label>
+                        <input type="text" name="first-name" id="first-name">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password">
+                    </div>
+                    <div class="formColumn">
+                        <label for="last-name">Last Name</label>
+                        <input type="text" id="last-name" required>
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" name="phone" id="phone">
+                        <label for="passwordConfirm">Confirm Password</label>
+                        <input type="password" name="passwordConfirm" id="passwordConfirm" required>
                     </div>
                 </div>
-                <div class="formColumn">
-                    <label for="last-name">Last Name</label>
-                    <input type="text" id="last-name">
-                    <label for="phone">Phone Number</label>
-                    <input type="number" name="phone" id="phone">
-                    <label for="passwordConfirm">Confirm Password</label>
-                    <input type="password" name="passwordConfirm" id="passwordConfirm">
-                </div>
+                    <div class="tableFooter">
+                            <input type="submit" value="Create Account">
+                            <p>Already have an account? <a href="">Log in</a></p>
+                    </div>
             </form>
         </div>
     </main>
