Update and fix responsive behavior of elements
Sections now use dynamic units and flow better with screen size, expanding and collapsing sections for appropriate spacing. .main uses flex: 1 to prevent overflow of input elements.
To-do: Fonts, input styling and spacing, form validation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="content">
             <form action="" method="get">
                 <div class="tableTop">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium porro reprehenderit repudiandae quis dolore tempore ratione numquam nihil rerum hic qui dolor iure odit nesciunt at quod, facilis tenetur!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium porro reprehenderit repudiandae quis dolore tempore</p>
                     <h2 id="callToAction">call to action</h2>
                 </div>
                 <div class="tableInputWrapper">
