Update form labels and inputs to flex
Removed input classes and replaced with classes that facilitate simpler grouping for flexbox. Flexbox is used to add dynamic spacing and maintain the specific positioning (label above input, next field to the right, etc) of the design file.

--- a/index.html
+++ b/index.html
@@ -16,28 +16,42 @@
 </aside>
     <main>
         <div class="content">
+            <div class="tableTop">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium porro reprehenderit repudiandae quis dolore tempore</p>
+                <h2 id="callToAction">call to action</h2>
+            </div>
             <form action="" method="get">
-                <div class="tableTop">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium porro reprehenderit repudiandae quis dolore tempore</p>
-                    <h2 id="callToAction">call to action</h2>
-                </div>
                 <div class="tableInputWrapper">
-                    <div class="formColumn">
-                        <label for="first-name">First Name</label>
-                        <input type="text" name="first-name" id="first-name">
-                        <label for="email">Email</label>
-                        <input type="email" name="email" id="email">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" id="password">
-                    </div>
-                    <div class="formColumn">
-                        <label for="last-name">Last Name</label>
-                        <input type="text" id="last-name" required>
-                        <label for="phone">Phone Number</label>
-                        <input type="tel" name="phone" id="phone">
-                        <label for="passwordConfirm">Confirm Password</label>
-                        <input type="password" name="passwordConfirm" id="passwordConfirm" required>
-                    </div>
+                        <div class="row">
+                            <div class="inputGroup">
+                                <label for="first-name">First Name</label>
+                                <input type="text" name="first-name" id="first-name">
+                            </div>
+                            <div class="inputGroup">
+                                    <label for="last-name">Last Name</label>
+                                    <input type="text" id="last-name" required>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="inputGroup">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" id="email">
+                            </div>
+                            <div class="inputGroup">
+                                <label for="phone">Phone Number</label>
+                                <input type="tel" name="phone" id="phone">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="inputGroup">
+                                <label for="password">Password</label>
+                                <input type="password" name="password" id="password">
+                            </div>
+                            <div class="inputGroup">
+                                <label for="passwordConfirm">Confirm Password</label>
+                                <input type="password" name="passwordConfirm" id="passwordConfirm" required>
+                            </div>
+                        </div>
                 </div>
                     <div class="tableFooter">
                             <input type="submit" value="Create Account">
