--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="content">
             <form action="" method="get">
                 <div class="tableTop">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium porro reprehenderit repudiandae quis dolore tempore</p>
-                    <h2 id="callToAction">call to action</h2>
+                    <p>This is not a real online service! But if it were, you would know you need something like the Odin Project Travel Agency in your life to help you realize your deepest dreams. Sign up now to get started.</p>
+                    <h2>You know you want to.</h2>
                 </div>
                 <div class="tableInputWrapper">
                         <div class="row">
