Refactor form styling and enhance consistency
Dynamic font spacing and line height adjusted.
Section spacing is now standardized in a variable.

Added the following to fix zoom behavior on mobile:
    input {
    font-size: max(16px, 1rem);
    }

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="content">
             <form action="" method="get">
                 <div class="tableTop">
-                    <p>This is not a real online service! But if it were, you would know you need something like the Odin Project Travel Agency in your life to help you realize your deepest dreams. Sign up now to get started.</p>
-                    <h2>You know you want to.</h2>
+                    <p>This is not a real online service! But if it were, you would know you need something like the Odin Project Travel Agency in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+                    <h2>You <em>know</em> you want to.</h2>
                 </div>
                 <div class="tableInputWrapper">
                         <div class="row">
