--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </div>
                 </div>
                     <div class="tableFooter">
-                            <input type="submit" value="Create Account">
+                            <button type="submit">Create Account</button>
                             <p>Already have an account? <a href="">Log in</a></p>
                 </div>
             </form>
