--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="row">
                             <div class="inputGroup">
                                 <label for="password">Password</label>
-                                <input type="password" name="password" id="password" placeholder="Password1" minlength="8" pattern =".*[A-Z]+.*[\d]+.*" required />
+                                <input type="password" name="password" id="password" placeholder="Password1" minlength="8" pattern ="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{8,}$" required />
                                 <div class="pwReqInfo">
                                     <p>Password must contain at least 8 characters, including at least one number, one uppercase and one lowercase letter.</p>
                                 </div>
