Update input labels with new design
Input outlines/borders adjusted accordingly. Label color is a placeholder (variable in :root).
Fix to password info drawer. Relative positioning needed to be updated for :valid.

--- a/index.html
+++ b/index.html
@@ -25,34 +25,34 @@
                     <p id="midActionText">Let's do this!</p>
                         <div class="row">
                             <div class="inputGroup">
-                                <label for="first-name">First Name</label>
+                                <label for="first-name"><span>First Name</span></label>
                                 <input type="text" name="first-name" id="first-name" required />
                             </div>
                             <div class="inputGroup">
-                                    <label for="last-name">Last Name</label>
-                                    <input type="text" id="last-name" required />
+                                <label for="last-name"><span>Last Name</span></label>
+                                <input type="text" id="last-name" required />
                             </div>
                         </div>
                         <div class="row">
                             <div class="inputGroup">
-                                <label for="email">Email</label>
+                                <label for="email"><span>Email</span></label>
                                 <input type="email" name="email" id="email" required />
                             </div>
                             <div class="inputGroup">
-                                <label for="phone">Phone Number</label>
+                                <label for="phone"><span>Phone Number</span></label>
                                 <input type="tel" name="phone" id="phone" pattern="\+?\(?\d{3}\)?[-\s.]?\d{3}[-\s.]?\d{4,6}" required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="inputGroup">
-                                <label for="password">Password</label>
+                                <label for="password"><span>Password</span></label>
                                 <input type="password" name="password" id="password" minlength="8" pattern ="(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{8,}" required />
                                 <div class="pwReqInfo">
                                     <p>Password must contain at least 8 characters, including at least one number, one uppercase and one lowercase letter.</p>
                                 </div>
                             </div>
                             <div class="inputGroup">
-                                <label for="passwordConfirm">Confirm Password</label>
+                                <label for="passwordConfirm"><span>Confirm Password</span></label>
                                 <input type="password" name="passwordConfirm" id="passwordConfirm" required />
                             </div>
                         </div>
