Replace fonts, update description text and section
Top section (description and h2) redesigned. Fonts for logo and all other text replaced.

To-do: logo spacing

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
         <div class="content">
             <form action="" method="get">
                 <div class="tableTop">
-                    <p>This is not a real online service! But if it were, you would know you need something like the Odin Project Travel Agency in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
-                    <h2>You <em>know</em> you want to.</h2>
+                    <span>
+                        <p>Relaxation, adventure, and escape await. Let the <i>Odin Project Travel Agency</i> handle the details, so you can focus on making memories.</p>
+                        <h2>Sign up below to get started.
+                        </h2>
+                    </span>
                 </div>
                 <div class="tableInputWrapper">
-                    <p id="midActionText">Let's do this!</p>
                         <div class="row">
                             <div class="inputGroup">
                                 <label for="first-name"><span>First Name</span></label>
