Update phone validation Regex
Simple Regex used since in-depth validation needs to be done via backend or Javascript.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             </div>
                             <div class="inputGroup">
                                 <label for="phone"><span>Phone Number</span></label>
-                                <input type="tel" name="phone" id="phone" pattern="\+?\(?\d{3}\)?[-\s.]?\d{3}[-\s.]?\d{4,6}" required>
+                                <input type="tel" name="phone" id="phone" pattern="\+?[\d\-\s]+" required />
                             </div>
                         </div>
                         <div class="row">
