--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
 <aside class="left">   
     <div class="logo">
-        <img src="odin-lined.png" alt="The Odin Project logo">
-        <h1>Odin</h1>
+        <div>
+            <img src="odin-lined.png" alt="The Odin Project logo">
+            <h1>Odin</h1>
+        </div>
     </div>
 </aside>
     <main>
