--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <form action="" method="get">
                 <div class="tableTop">
                     <span>
-                        <p>Relaxation, adventure, and escape await. Let the <i>Odin Project Travel Agency</i> handle the details, so you can focus on making memories.</p>
+                        <p>Relaxation, adventure, and escape await. Let <i>Odin Virtual Reality Tours</i> handle the details, so you can focus on making memories.</p>
                         <h2>Sign up below to get started.
                         </h2>
                     </span>
